data/issues_nolabel/nolabel_test_14371.txt
Fix #14324 and another compile error with mkl

This fix fixes #14324 and another compile error with mkl below

ERROR: /home/zhang/tensorflow/tensorflow/core/kernels/BUILD:780:1: C++ compilation of rule '//tensorflow/core/kernels:slice_op' failed (Exit 1)
tensorflow/core/kernels/slice_op.cc: In member function 'void tensorflow::MklSliceOp<Device, T>::HandleCase4D(tensorflow::OpKernelContext*, const tensorflow::gtl::ArraySlice&, const tensorflow::gtl::ArraySlice&, tensorflow::Tensor*)':
tensorflow/core/kernels/slice_op.cc:393:50: error: 'input' was not declared in this scope
context->eigen_device(), result, input, begin, size);
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.

Update:
Found a similar PR #14329 has been posted already.
But this fix improves that fix by removing redundant code. Should I close this PR and create a new one to improve that fix?